<resources>
    <string name="app_name">TOP QUIZ</string>
    <string name="profileSelection_welcome">Bienvenue dans TOP QUIZ ! Choisissez votre profil :</string>
    <string name="profileSelection_new_player">+</string>
    <string name="menu_play">Jouer</string>
    <string name="menu_statistics">Statistiques</string>
    <string name="menu_credits">Crédits</string>
    <string name="menu_quit">Quitter</string>
    <string name="menu_welcome_player">Bienvenue</string>
    <string name="menu_profile">Selection du profil</string>
    <string name="menu_sound">Son</string>
    <string name="menu_select_game">Choisis ton mode de jeu !</string>

    <string name="star">étoile</string>

    <string name="credits">Créé par Benoit SECHEHAYE, Loïc FAISY et Davy MU</string>

    <string name="profileSelection_enter_name">Entrez votre nom</string>
    <string name="profileSelection_name">Nom :</string>

    <string name="statistics_back">Retour</string>
    <string name="statistics_statistics">statistique</string>
    <string name="statistics_here_statistics">Voici vos statistiques</string>
    <string name="statistics_nb_game_play">Nombre de partie jouées :</string>
    <string name="statistics_nb_game_play_find">Nombre de partie jouées trouver charlie :</string>
    <string name="statistics_nb_game_play_memory">Nombre de partie jouées memory :</string>
    <string name="statistics_nb_game_play_maths">Nombre de partie jouées calculs mentaux :</string>
    <string name="statistics_nb_score_global">Nombre total de points gagnés :</string>
    <string name="statistics_nb_score_memory">Nombre total de points memory :</string>
    <string name="statistics_nb_score_find">Nombre total de points trouver charlie :</string>
    <string name="statistics_nb_score_maths">Nombre total de points calcul mentaux :</string>

    <string name ="game_lose">Vous avez perdu ! Vous avez %d points !</string>
    <string name ="game_win">Vous avez gagné ! Vous avez %d points !</string>
    <string name ="memory_rules">Veuillez reproduire la séquence de couleur !</string>
    <string name ="calcul_rules">Veuillez choisir la bonne réponse du calcul suivant :</string>
    <string name="memory">Memory</string>
    <string name="calculation">Calcul mental</string>
    <string name="Find">Trouver charlie</string>

    <string name ="ESIEE">Trouver l\'ESIEE dans cette image</string>
    <string name ="IUT">Trouver l\'IUT dans cette image</string>
    <string name ="FAC">Trouver la fac dans cette image</string>
    <string name ="PONT">Trouver l\'école des Ponts ParisTech dans cette image</string>
    <string name ="GARE">Trouver la gare de Noisy-Champs dans cette image</string>

    <string name ="FR">Trouver la France dans cette image</string>
    <string name ="ES">Trouver l\'Espagne dans cette image</string>
    <string name ="DE">Trouver l\'Allemagne dans cette image</string>
    <string name ="GR">Trouver la Grèce dans cette image</string>
    <string name ="RM">Trouver la Roumanie dans cette image</string>
    <string name ="UR">Trouver l\'Ukraine dans cette image</string>
    <string name ="TQ">Trouver la Turquie dans cette image</string>
    <string name ="UK">Trouver le Royaume Uni dans cette image</string>
</resources>