<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.StatisticsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/activity_statistics_imageButton_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/menu_sound"
            app:srcCompat="@drawable/sound" />

        <ImageButton
            android:id="@+id/activity_statistics_imageButton_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/statistics_back"
            app:srcCompat="@drawable/back" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/activity_statistics_imageView_statistics"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/statistics_statistics"
        app:srcCompat="@drawable/statistics" />

    <TextView
        android:id="@+id/activity_statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_here_statistics"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/activity_statistics_nb_game_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/statistics_nb_game_play"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_statistics_nb_score_global"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_score_global"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/activity_statistics_nb_game_play_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_game_play_find"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_statistics_nb_game_play_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_game_play_memory"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/activity_statistics_nb_game_play_maths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_game_play_maths"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_statistics_nb_score_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_score_find"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_statistics_nb_score_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_score_memory"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_statistics_nb_score_maths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/statistics_nb_score_maths"
        android:textSize="16sp" />

</LinearLayout>