<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/activity_menu_imageButton_profilSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/menu_sound"
            app:srcCompat="@drawable/sound" />

        <ImageButton
            android:id="@+id/activity_menu_imageButton_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#FFFFFF"
            android:contentDescription="@string/menu_profile"
            app:srcCompat="@drawable/profil" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/activity_menu_imageView_star"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/star"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/activity_menu_textView"
        app:srcCompat="@drawable/star" />
    <TextView
        android:id="@+id/activity_menu_textView"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="0dp"
        android:text="@string/menu_welcome_player"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_menu_button_play"
        />

    <Button
        android:id="@+id/activity_menu_button_play"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_play" />
    <Button
        android:id="@+id/activity_menu_button_stat"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_statistics"  />
    <Button
        android:id="@+id/activity_menu_button_credit"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_credits" />
    <Button
        android:id="@+id/activity_menu_button_exit"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_quit" />



</LinearLayout>