<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ProfileSelectionActivity">

    <Button
        android:id="@+id/profileSelection_activity_button_profile1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="350dp"
        android:text="@string/profileSelection_new_player"
        android:textSize="96sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileSelection_activity_button_profile2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="50dp"
        android:text="@string/profileSelection_new_player"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileSelection_activity_button_profile3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="500dp"
        android:text="@string/profileSelection_new_player"
        android:textSize="96sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileSelection_activity_button_profile4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="50dp"
        android:text="@string/profileSelection_new_player"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileSelection_activity_textView"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:text="@string/profileSelection_welcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profileSelection_activity_button_profile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <ImageView
        android:id="@+id/profileSelection_activity_imageView_star"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toTopOf="@+id/profileSelection_activity_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/star" />

</androidx.constraintlayout.widget.ConstraintLayout>